src/test/ui/issues/issue-40610.stderr
error[E0369]: binary operation `+` cannot be applied to type `()`
  --> $DIR/issue-40610.rs:4:8
   |
LL |     () + f(&[1.0]);
   |     -- ^ --------- ()
   |     |
   |     ()
   |
   = note: an implementation of `std::ops::Add` might be missing for `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0369`.
